# go2_pendulum_mjlab

./: .gitignore  README.md  pyproject.toml
assets/go2_pendulum/: go2_pendulum.xml
scripts/: debug_action_shaper.py  list_envs.py  play.py  train.py
src/go2_pendulum_mjlab/: __init__.py
src/go2_pendulum_mjlab.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/go2_pendulum_mjlab/assets/go2_pendulum/: go2_pendulum.xml
src/go2_pendulum_mjlab/tasks/: __init__.py
src/go2_pendulum_mjlab/tasks/go2_pendulum/: __init__.py  constants.py  robot_cfg.py
src/go2_pendulum_mjlab/tasks/go2_pendulum/config/go2/: __init__.py  env_cfg.py  rl_cfg.py
src/go2_pendulum_mjlab/tasks/go2_pendulum/mdp/: __init__.py  actions.py  commands.py  curriculum.py  events.py  gait.py  observations.py  rewards.py  terminations.py
src/go2_pendulum_mjlab/tasks/go2_pendulum/rl/: __init__.py
